[gd_scene load_steps=4 format=2]

[ext_resource path="res://mocraAdventure/map_editor/dialog/texture.png" type="Texture" id=1]
[ext_resource path="res://mocraAdventure/map_editor/dialog/dialog.gd" type="Script" id=2]
[ext_resource path="res://Theme/default/theme.tres" type="Theme" id=3]

[node name="Control" type="Control"]
margin_left = -200.0
margin_top = -179.0
margin_right = 200.0
margin_bottom = 148.0
rect_min_size = Vector2( 400, 327 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 200, 182 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = -18.0
margin_top = 132.0
margin_right = 422.0
margin_bottom = 217.0
theme = ExtResource( 3 )
text = "ADD WARP"

[node name="entityName" type="Label" parent="."]
margin_left = -15.0
margin_top = 3.0
margin_right = 415.0
margin_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
text = "Entity name"

[connection signal="mouse_entered" from="." to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Control_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
